--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=ecommerce
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mmdjewellery
-spring.datasource.username=root
-spring.datasource.password=2022021300362
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12779067
+spring.datasource.username=sql12779067
+spring.datasource.password=F2ufsXL8Fb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-
-# Hibernate Dialect for MySQL 8
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 server.servlet.session.persistent=true
 spring.session.store-type=jdbc
